Solved Distance Problem

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <script src="Ship.js"></script>
     <style>
         body {
-            padding: 0;
-            margin: 0;
+            padding: auto;
+            margin: auto;
         }
     </style>
 </head>
